[gd_scene load_steps=3 format=3 uid="uid://cfjujdo2dk1xe"]

[ext_resource type="Script" uid="uid://bd1vhqo5n3nef" path="res://addons/quest_weaver/ui/questlog/quest_log_ui.gd" id="1_45syc"]
[ext_resource type="PackedScene" uid="uid://bh6k7alrx0bi7" path="res://addons/quest_weaver/ui/questlog/quest_category_header.tscn" id="2_bss5o"]

[node name="QuestLogUI" type="CanvasLayer"]
script = ExtResource("1_45syc")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="Panel" type="Panel" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="Panel/MarginContainer"]
layout_mode = 2
dragging_enabled = false
drag_area_highlight_in_editor = true

[node name="Node0" type="Control" parent="Panel/MarginContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/HSplitContainer/Node0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/HSplitContainer/Node0/MarginContainer"]
layout_mode = 2

[node name="QuestListContainer" type="VBoxContainer" parent="Panel/MarginContainer/HSplitContainer/Node0/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ActiveQuestsHeader" parent="Panel/MarginContainer/HSplitContainer/Node0/MarginContainer/ScrollContainer/QuestListContainer" instance=ExtResource("2_bss5o")]
unique_name_in_owner = true
layout_mode = 2

[node name="CompletedQuestsHeader" parent="Panel/MarginContainer/HSplitContainer/Node0/MarginContainer/ScrollContainer/QuestListContainer" instance=ExtResource("2_bss5o")]
unique_name_in_owner = true
layout_mode = 2

[node name="FailedQuestsHeader" parent="Panel/MarginContainer/HSplitContainer/Node0/MarginContainer/ScrollContainer/QuestListContainer" instance=ExtResource("2_bss5o")]
unique_name_in_owner = true
layout_mode = 2

[node name="Node1" type="Control" parent="Panel/MarginContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="QuestDetailContainer" type="VBoxContainer" parent="Panel/MarginContainer/HSplitContainer/Node1"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DetailTitleLabel" type="Label" parent="Panel/MarginContainer/HSplitContainer/Node1/QuestDetailContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quest Title"

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/HSplitContainer/Node1/QuestDetailContainer"]
layout_mode = 2

[node name="DetailDescriptionLabel" type="RichTextLabel" parent="Panel/MarginContainer/HSplitContainer/Node1/QuestDetailContainer"]
unique_name_in_owner = true
layout_mode = 2
fit_content = true

[node name="Label" type="Label" parent="Panel/MarginContainer/HSplitContainer/Node1/QuestDetailContainer"]
layout_mode = 2
text = "Objective(s):"

[node name="DetailObjectivesList" type="VBoxContainer" parent="Panel/MarginContainer/HSplitContainer/Node1/QuestDetailContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 20)
layout_mode = 2

[node name="DetailLogList" type="VBoxContainer" parent="Panel/MarginContainer/HSplitContainer/Node1/QuestDetailContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
